--- a/MÓDULO 2/DESAFIOS/DESAFIO 10/style.css
+++ b/MÓDULO 2/DESAFIOS/DESAFIO 10/style.css
@@ -3,9 +3,10 @@
     font-family: 'Android';
     src: url(fonts/idroid.otf) format(opentype);
 }
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kaushan+Script&family=Oxanium:wght@300;400;700&family=Work+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Bebas Neue', sans-serif;
     background-color: #84E1AD;
 }
 
