--- a/MÓDULO 2/DESAFIOS/DESAFIO 10/estilo/style.css
+++ b/MÓDULO 2/DESAFIOS/DESAFIO 10/estilo/style.css
@@ -5,6 +5,12 @@
 }
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kaushan+Script&family=Oxanium:wght@300;400;700&family=Work+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
+header{
+    color: white;
+    font-size: 20px;
+    margin: auto;
+}
+
 body {
     font-family: 'Bebas Neue', sans-serif;
     background-color: #84E1AD;
@@ -38,4 +44,10 @@ h2 {
 p{
     text-align: justify;
     text-indent: 30px;
+}
+
+#youtube{
+    background-color: #245e3d;
+    padding: 40px;
+    margin: 0 auto;
 }
