--- a/MÓDULO 2/DESAFIOS/DESAFIO 10/estilo/style.css
+++ b/MÓDULO 2/DESAFIOS/DESAFIO 10/estilo/style.css
@@ -92,7 +92,8 @@ main {
 }
 
 main h2 {
-    background-color: var(--cor1);
+    background-image: linear-gradient(to right, var(--cor1), transparent);
+    text-indent: 8px;
 }
 
 main p {
