--- a/MÓDULO 3/DESAFIOS/DESAFIO 01/style.css
+++ b/MÓDULO 3/DESAFIOS/DESAFIO 01/style.css
@@ -69,10 +69,8 @@ section {
 
 section.normal {
     background-color: white;
-    font-family: var(--fonte3);
-    
-    padding-top: 50px;
-    padding-bottom: 200px;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 .normal > p {
@@ -82,10 +80,12 @@ section.normal {
 section.imagem {
     background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+    background-size: cover;
+    background-attachment: fixed;
 
-    font-family: var(--fonte3);
-    padding-top: 50px;
-    padding-bottom: 200px;
+    padding-top: 100px;
+    padding-bottom: 100px;
     
 }
 
@@ -100,24 +100,17 @@ section.imagem > p {
 #imagem01 {
     height: 100vh;
     background-image: url(img/background001.jpg);
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
 }
 
 #imagem02 {
     height: 100vh;
     background-image: url(img/background002.jpg);
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
 }
 
 footer {
     background-color: black;
     text-align: center;
     padding: 10px;
-
     height: 60px;
 }
 
